# ROAColorCodeBot

./: .gitignore  README.md  bot.js  colorcodelib.js
ImageEngine/: CMakeLists.txt
ImageEngine/src/: parser.cpp  preview.cpp
commands/: absa.js  clairen.js  elliana.js  etalus.js  forsburn.js  kragg.js  maypul.js  orcane.js  ori.js  present.js  random.js  ranno.js  server.js  shovelknight.js  sylvanos.js  wrastor.js  zetterburn.js
